# room-schema-export-bazel

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  deps.bzl  maven_install.json
app/: AndroidManifest.xml  AppDatabase.kt  BUILD.bazel  MainActivity.kt  Member.kt  MemberDao.kt
app/res/layout/: activity_main.xml
