load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")

android_binary(
    name = "app",
    manifest = "AndroidManifest.xml",
    deps = [":lib"],
)

kt_android_library(
    name = "lib",
    srcs = [
        "AppDatabase.kt",
        "MainActivity.kt",
        "Member.kt",
        "MemberDao.kt",
    ],
    visibility = ["//visibility:private"],
    plugins = [
        "//third_party/androidx/room-compiler:ksp",
    ],
    deps = [
        "@maven//:androidx_room_room_common",
        "@maven//:androidx_room_room_ktx",
        "@maven//:androidx_room_room_migration",
        "@maven//:androidx_room_room_runtime",
    ],
)
